--- a/css/style.css
+++ b/css/style.css
@@ -540,6 +540,10 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
     vertical-align: middle;
 	color:#fff;
 }
+.form_radio_wrap input[type="radio"] + label{
+    background-image: url("../images/radio-bg.png");
+	background-position:0 center;
+}
 /* selected checkbox */
 .form_checkbox_wrap input[type="checkbox"]:checked + label{
 	background-image: url("../images/checkboxCur-bg.png");
@@ -548,11 +552,6 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 .form_radio_wrap input[type="radio"]:checked + label{
     background-image: url("../images/radio-bgCur.png");
 	background-position: 0 center;
-}
-
-.form_radio_wrap input[type="radio"] + label{
-    background-image: url("../images/radio-bg.png");
-	background-position:0 center;
 }
 
 .form_txt_style{
@@ -1638,12 +1637,12 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 	content:"\e608";
 }
 
-.eb_audit_items:nth-of-type(1) {-webkit-animation-delay:0s;animation-delay:0s}
-.eb_audit_items:nth-of-type(2) {-webkit-animation-delay:0.1s;animation-delay:0.1s}
-.eb_audit_items:nth-of-type(3) {-webkit-animation-delay:0.2s;animation-delay:0.2s}
-.eb_audit_items:nth-of-type(4) {-webkit-animation-delay:0.3s;animation-delay:0.3s}
-.eb_audit_items:nth-of-type(5) {-webkit-animation-delay:0.4s;animation-delay:0.4s}
-.eb_audit_items:nth-of-type(6) {-webkit-animation-delay:0.5s;animation-delay:0.5s}
+.eb_audit_items:nth-of-type(1) {-webkit-animation-delay:0.3s;animation-delay:0.3s}
+.eb_audit_items:nth-of-type(2) {-webkit-animation-delay:0.5s;animation-delay:0.5s}
+.eb_audit_items:nth-of-type(3) {-webkit-animation-delay:0.7s;animation-delay:0.7s}
+.eb_audit_items:nth-of-type(4) {-webkit-animation-delay:0.9s;animation-delay:0.9s}
+.eb_audit_items:nth-of-type(5) {-webkit-animation-delay:1.1s;animation-delay:1.1s}
+.eb_audit_items:nth-of-type(6) {-webkit-animation-delay:1.3s;animation-delay:1.3s}
 
 
 .ui_auditodm_title{padding:0.75em 0.5em; background: rgba(0,0,0,0.3); font-size:3.6em; color:#fff; line-height:normal;}
@@ -1691,10 +1690,9 @@ only screen and (min-device-pixel-ratio: 2) {
     .form_date{ background-image: url(../images/calendar-ico@2x.png);}
     
     .form_checkbox_wrap input[type="checkbox"] + label { background-image: url("../images/checkbox-bg@2x.png");}
-	.form_checkbox_wrap input[type="checkbox"]:checked + label{
-		background-image: url("../images/checkboxCur-bg@2x.png");
-	}
-    .form_radio_wrap input[type="radio"] + label{ background-image: url("../images/radio-bgCur@2x.png") ;}
+	.form_checkbox_wrap input[type="checkbox"]:checked + label{background-image: url("../images/checkboxCur-bg@2x.png");}
+    .form_radio_wrap input[type="radio"] + label{ background-image: url("../images/radio-bg@2x.png") ;}
+    .form_checkbox_wrap input[type="radio"]:checked + label{background-image: url("../images/radio-bgCur@2x.png");}
 
     .form_select{ background-image: url(../images/down-bg@2x.png);}
     
