--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,15 @@ input{
         -webkit-transform:rotateZ(-360deg)
     }
 }
+
+/*tony*/
+.t-box{
+    display: -webkit-box;
+    -webkit-box-flex:1;
+    -webkit-box-orient:vertical ; 
+}
+
+
 .ui-loading .ui-loader {
 	display: block
 }
@@ -434,7 +443,7 @@ input{
     height: 36px;
     font-size: 15px;
     line-height: 36px;
-    width: 60%;
+    width: 80%;
     margin: 0 auto;
     overflow: hidden;
     text-align: center;
@@ -485,8 +494,20 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
     text-decoration: none;
     padding: 8px 0 5px;
 }
-.navWrap a.navList:hover,.navWrap a.navList:active,.navWrap a.navList:hover i,.navWrap a.navList:active i{
+.navWrap a.nav01:hover,.navWrap a.nav01:active,.navWrap a.nav01:hover i,.navWrap a.nav01:active i,.navWrap a.nav01.cur,.navWrap a.nav01.cur i{
     color: #4d93ac;
+}
+.navWrap a.nav02:hover,.navWrap a.nav02:active,.navWrap a.nav02:hover i,.navWrap a.nav02:active i,.navWrap a.nav02.cur,.navWrap a.nav02.cur i{
+    color: #02b9cc;
+}
+.navWrap a.nav03:hover,.navWrap a.nav03:active,.navWrap a.nav03:hover i,.navWrap a.nav03:active i,.navWrap a.nav03.cur,.navWrap a.nav03.cur i{
+    color: #8980db;
+}
+.navWrap a.nav04:hover,.navWrap a.nav04:active,.navWrap a.nav04:hover i,.navWrap a.nav04:active i,.navWrap a.nav04.cur,.navWrap a.nav04.cur i{
+    color: #e09c5a;
+}
+.navWrap a.nav05:hover,.navWrap a.nav05:active,.navWrap a.nav05:hover i,.navWrap a.nav05:active i,.navWrap a.nav05.cur,.navWrap a.nav05.cur i{
+    color: #64a091;
 }
 .navWrap a.nav01{background-color: rgba(0,0,0,0.8);}
 .navWrap a.nav02{background-color: rgba(0,0,0,0.7);}
@@ -1266,6 +1287,7 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 .selTab-table{
 	display:table;
 	width:100%;
+    box-sizing: border-box;
 }
 .selTab-th{
 	display:table-row;
@@ -1392,9 +1414,9 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 	margin-top:4px;
 	background:rgba(255, 255, 255 ,0.2);
 	cursor:pointer;
+    width: 100px;
     height:27px;
     display:inline-block;
-    padding: 0 10px;
 }
 .chartsTab_l {
 	border-radius:15px 0 0 15px;
@@ -1418,6 +1440,7 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 }
 .chartsBox .chartsCon{
     width: 100%;
+    height: 100%;
     position: absolute;
     left: 0;
     top: 0;
@@ -1436,6 +1459,7 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 	padding:10px 0 0 10px;
 }
 .chartHide {
+    display: none;
     visibility: hidden;
 }
 
@@ -1451,7 +1475,7 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 	font-weight: normal;
 }
 .eachBlockTitle_dt .ebtd_h3 {
-	padding:14px 0 0  10px;
+	padding:7px 0 0  10px;
 	display: inline-block;
 }
 .ebtd_h3 .ebtd_down,
@@ -1460,6 +1484,14 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 	font-weight:lighter;
 	font-size: 32px;
 	color:#fff;
+}
+.ebtdLine{
+    display: inline-block;
+    font-size: 0;
+    width: 1px;
+    height: 24px;
+    background-color: rgba(255,255,255,0.6);
+    margin: 0 10px;
 }
 .ebtd_h3 .ebtd_down b,
 .ebtd_h3 .ebtd_up b,
@@ -1476,7 +1508,7 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 .ebtd_table {
 	display: table;
 	font-size: 12px;
-	line-height: 16px; 
+	line-height: 14px; 
 	color: #fff;
 }
 .ebtd_table .row {
@@ -1586,7 +1618,7 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 
 .eb_audit_inner {
 	width: 100%;
-	height: 100%;	
+/*	height: 100%;	*/
 }
 
 
@@ -1693,10 +1725,10 @@ a.myico-search,a.myico-search:hover,a.myico-search:active,a.myico-search:visited
 .ui_fai_pie,
 .ui_fai_bar,
 .ui_fai_map{
-	width:93.5%;
+	width:98%;
 	margin:2.5% auto 0;
 	height:30%;
-	min-height:180px;
+	min-height:150px;
 }
 .ui_fai_pie{border:1px solid rgba(237,222,207,0.2);}
 .ui_fai_map{	
@@ -1723,75 +1755,96 @@ only screen and (min-device-pixel-ratio: 2) {
     
 }
 /*
-===========index.html 地图右侧数据列表    ===========
+===========index.html 地图顶部数据列表    ===========
 */
+.page_swicher_wrap{
+    width: 100%;
+    height: 180px;
+}
+.page_swicher_1,{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0;
+}
+.page_swicher_2{
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0px;
+	left: 0px;
+}
 .mapSideBot {
-	margin-top: 24px;
+    width: 100%;
+    height: 160px;
+    overflow: hidden;
 	/*如果有生之年能看到这个样式被其它浏览器支持，请Mail告诉我*/
 	mask-image:url(../images/mapsidemask.png);
-	mask-size:100% 100%;
+	mask-size:100% auto;
 	mask-position-x:0;
 	mask-position-y:0;
 	
 	-moz-mask-image:url(../images/mapsidemask.png);
-	-moz-mask-size:100% 100%;
+	-moz-mask-size:100% auto;
 	-moz-mask-position-x:0;
 	-moz-mask-position-y:0;
 	
 	-ms-mask-image:url(../images/mapsidemask.png);
-	-ms-mask-size:100% 100%;
+	-ms-mask-size:100% auto;
 	-ms-mask-position-x:0;
 	-ms-mask-position-y:0;
 	
 	-webkit-mask-image:url(../images/mapsidemask.png);
-	-webkit-mask-size:100% 100%;
+	-webkit-mask-size:100% auto;
 	-webkit-mask-position-x:0;
 	-webkit-mask-position-y:0;
 }
 #mapSide {
 	float:left;
 	width: 100%;
-	height: 130px;
 }
 .mslist {
 	color: #fff;
 }
 .mslist .msEachlist{
-	width:100%;
-	padding: 10px 0;
+    float: left;
+    width: 186px;
+	padding: 2px 0;
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	cursor: pointer;
 }
-.mslist .msEachlist:hover .mapDataDetail {
-	background-color: rgba(255, 255, 255, 0.05);
+.mslist .msEachlist:hover .mapDataDetail,.mslist .msEachlist:active .mapDataDetail {
+	background-color: rgba(255, 255, 255, 0.25);
 }
 .mapDataDetail {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 	border: solid 1px rgba(255, 255, 255, 0);
-	padding: 10px;
+	padding: 5px;
 }
 
-.swiper-slide-click-active .mapDataDetail {
-	border: solid 1px rgba(255, 255, 255, 0.3);
-	background: rgba(255, 255, 255, 0.1);
+.swiper-slide-active .mapDataDetail {
+	border: solid 1px rgba(255, 255, 255, 0.2);
+	background: rgba(255, 255, 255, 0.25);
 	box-shadow: 0 0 10px rgba(0,0,0,.2);
 }
 .mdh2 {
-	line-height: 56px;
-	font-size: 30px;
+	line-height: 20px;
+	font-size: 11px;
 	color: #fff;
 	border-bottom: solid 1px rgba(255, 255, 255, 0.3);
 	font-weight: normal;
+    text-align: center;
 }
 .mdh2 .mdh2_1{
 	
 }
 .mdh2 .mdh2_2{
-	font-size: 32px;
+	font-size: 11px;
 }
 
 .mdhlist {
@@ -1799,8 +1852,8 @@ only screen and (min-device-pixel-ratio: 2) {
 }
 .mdhlist .mdhli{
 	overflow: hidden;
-	line-height: 30px;
-	font-size: 18px;
+	line-height: 20px;
+	font-size: 11px;
 }
 
 .mdhli .mli_l {
@@ -1811,15 +1864,15 @@ only screen and (min-device-pixel-ratio: 2) {
 	color: #ffe900;
 }
 .mapswipebtn,.pageswipebtn {
-	height: 56px;
-	line-height: 56px;
+	height: 36px;
+	line-height: 36px;
 	padding: 0 52px;
 	border: solid 2px #fff;
-	font-size: 24px;
+	font-size: 11px;
 	color: #fff;
 	float: left;
 	display: block;
-	border-radius: 50px;
+	border-radius: 30px;
 	cursor: pointer;
 	margin-right: 10px;
 }
@@ -1829,11 +1882,115 @@ only screen and (min-device-pixel-ratio: 2) {
 }
 #mapWrap {
 	height: 100%;
-	margin-right: 444px;
-	margin-left: 40px;
-	/*background: #000;*/
 }
 
 /*
 《=======index.html 地图右侧数据列表=结束=======》
 */
+/*20141022 新添样式*/
+.LenovoIconBox{
+    clear: both;
+}
+.chartsTab{
+    color: #fff;
+    margin: 5px 0 10px;
+    width: 100%;
+    position: relative;
+    float: left;
+}
+.chartsTab .chartsTabTag{
+    display: inline-block;
+    font-size: 15px;
+    text-decoration: none;
+    width: 50%;
+    text-align: center;
+    float: left;
+}
+.chartsTab .chartsTabTag font{
+    color: rgba(255,255,255,0.4);
+    padding:0 3px 3px;
+    border-bottom: 2px solid transparent;
+}
+.chartsTab .chartsTabTag.cur font{
+    color: rgba(255,255,255,1);
+    border-bottom-color: #fff;
+}
+.chartsTab .listDot{
+    font-size: 0;
+    width: 4px;
+    height: 4px;
+    border-radius: 2px;
+    background-color: #fff;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 10;
+    margin: -2px 0 0 -2px;
+}
+.t-box-wrap{
+    position: relative;
+/*    height: 100%;*/
+}
+.t-box-wrap .font-bg{
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    left: 0;
+    top: 50%;
+    z-index: 1;
+    margin-top: -50px;
+    text-align: center;
+    font-size: 100px;
+    color: #fff;
+    opacity: 0.08;
+}
+.t-box-wrap .t-box{
+    position: relative;
+    z-index: 10;
+}
+.chartFilter {
+	position: absolute;
+	right: 0;
+	top: 0;
+	width: 25px;
+	height: 100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	padding-top: 50px;
+	padding-bottom: 20px;
+	overflow:visible;
+	z-index: 15;
+}
+.ccs {
+	position: relative;
+	text-align: center;
+	color:#fff;
+	font-size: 12px;
+	height: 3.85%;
+	cursor: pointer;
+}
+.ccs:after {
+	height: 100%;
+	display: inline-block;
+	width: 0;
+	vertical-align: middle;
+	margin-top:3px;
+	content: '';
+}
+.ccs.cur {
+	color:#00C5E5;
+}
+.ccs.cur:before {
+	z-index: -1;
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	margin:-10px 0 0 -10px;
+	display: inline-block;
+	border-radius:40px;
+	content: '';
+	width: 20px;
+	height: 20px;
+	background:rgba(255,255,255,0.75);
+}
